[package]
name = "node-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.31", features = ["std", "rand"]}
clap = { version = "4.5.2", features = ["derive"] }
futures = "0.3"
hickory-resolver = "0.24.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-io-timeout = "1.2"
tracing = "0.1"
tracing-subscriber = "0.3"
