[package]
name = "node-handshake"
version = "0.1.0"
edition = "2021"
authors = ["Chris Whealy <chris@whealy.com>"]
license = "MIT"
readme = "README.md"
description = "PoC app that performs a BitCoin P2P node handshake"
repository = "https://github.com/ChrisWhealy/node_handshake"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.31", features = ["std", "rand"]}
clap = { version = "4.5.2", features = ["derive"] }
futures = "0.3"
hickory-resolver = "0.24.0"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-io-timeout = "1.2"
tracing = "0.1"
tracing-subscriber = "0.3"
